--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p class="passage-audio" hidden>
                 <audio id="passage-audio" class="passage" controls>
                     <!-- @todo WebM? -->
-                    <source src="audio/Luke.2.1-Luke.2.20.mp3" type="audio/mp3">
-                    <source src="audio/Luke.2.1-Luke.2.20.ogg" type="audio/ogg">
-                    <source src="audio/Luke.2.1-Luke.2.20.wav" type="audio/wav">
+                    <source src="audio/vahav.mp3" type="audio/mp3">
+                    <source src="audio/vahav.ogg" type="audio/ogg">
+           
                     <em class="error"><strong>Error:</strong> Your browser doesn't appear to support HTML5 Audio.</em>
                 </audio>
             </p>
