--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML5 Audio Read-Along Demo</title>
+        <title>V'ahavta</title>
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 
         <article>
             <h2>
-                <a href="http://www.oaklandsinai.org" title="xxx" target="_blank">V'ahavta</a>
+                <a href="http://www.oaklandsinai.org" title="xxx" target="_blank">Audio by Cantor Keys - Temple Sinai</a>
     
             </h2>
 
