--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>HTML5 Audio Read-Along Demo</h1>
+        <h1>V'ahavta</h1>
 
         <!-- @todo The link could pull in README.md via Ajax and render it inline -->
       
