--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                  <p><span data-dur="2.0" data-begin="66.9">b'shivt'cha</span> <span data-dur="1.22" data-begin="68.9">b'veitecha</span> <span data-dur="1.94" data-begin="70.74">uv'lechct'cha</span> <span data-dur="1.34" data-begin="72.82">vaderech</span> <span data-dur="2.08" data-begin="74.9">uv'shochb'cha</span> </sup><span data-dur="1.88" data-begin="77.4">uv'kumecha.</span> <p>
              <p><span data-dur="1.42" data-begin="80.18">Uk'shartam</span> <span data-dur="1.04" data-begin="81.7">l'ot</span> <span data-dur="0.32" data-begin="83.06">al</span> <span data-dur="1.1" data-begin="83.36">yadecha</span> <span data-dur="0.74" data-begin="85.14">v'hayu</span>, <span data-dur="1.98" data-begin="85.88">l'totafot</span> <span data-dur="0.54" data-begin="88.32">bein</span> <span data-dur="1.66" data-begin="88.9">einecha.</span> <p>
              <p><span data-dur="2.24" data-begin="91.34">Uct'tavtam</span> <span data-dur="0.3" data-begin="93.98">al</span> </sup><span data-dur="0.82" data-begin="94.3">m'zuzot</span> <span data-dur="1.34" data-begin="95.14">beitecha</span> <span data-dur="2.26" data-begin="96.92">uvish'arecha</span></p>
+
+<p><span data-dur="1.3" data-begin="100.18">L'maan</span> <span data-dur="1.48" data-begin="101.58">tizk'ru</span> </sup><span data-dur="1.82" data-begin="103.52">va'asitem</span> <span data-dur=".42" data-begin="105.58">et</span> <span data-dur="0.42" data-begin="105.88">kol</span> <span data-dur="1.38" data-begin="106.26">mitzvotai</span></p>
+
+<p><span data-dur="1.02" data-begin="108.36">vih'yitem</span> <span data-dur="1.44" data-begin="109.42">k'doshim</span> </sup><span data-dur="1.88" data-begin="111.42">l'loheichem.</span></p>
+
+<p><span data-dur="1.94" data-begin="114.22">Ani</span> <span data-dur="1.46" data-begin="116.3">Adonai</span> </sup><span data-dur="2.32" data-begin="117.96">Eloheichem</p>
                 
                
             </div>
