--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <article>
             <h2>
-                <a href="http://www.oaklandsinai.org" title="xxx" target="_blank">Audio by Cantor Keys - Temple Sinai</a>
+                <a href="https://oaklandsinai.org/Clergy-Staff" title="xxx" target="_blank">Audio by Cantor Ilene Keys - Temple Sinai</a>
     
             </h2>
 
@@ -64,7 +64,6 @@
              <p><span data-dur="1.42" data-begin="80.18">Uk'shartam</span> <span data-dur="1.04" data-begin="81.7">l'ot</span> <span data-dur="0.32" data-begin="83.06">al</span> <span data-dur="1.1" data-begin="83.36">yadecha</span> <span data-dur="0.74" data-begin="85.14">v'hayu</span>, <span data-dur="1.98" data-begin="85.88">l'totafot</span> <span data-dur="0.54" data-begin="88.32">bein</span> <span data-dur="1.66" data-begin="88.9">einecha.</span> <p>
              <p><span data-dur="2.24" data-begin="91.34">Uct'tavtam</span> <span data-dur="0.3" data-begin="93.98">al</span> </sup><span data-dur="0.82" data-begin="94.3">m'zuzot</span> <span data-dur="1.34" data-begin="95.14">beitecha</span> <span data-dur="2.26" data-begin="96.92">uvish'arecha</span></p>
 <br>
-<br>
 
 <p><span data-dur="1.3" data-begin="100.18">L'maan</span> <span data-dur="1.48" data-begin="101.58">tizk'ru</span> </sup><span data-dur="1.82" data-begin="103.52">va'asitem</span> <span data-dur=".42" data-begin="105.58">et</span> <span data-dur="0.42" data-begin="105.88">kol</span> <span data-dur="1.38" data-begin="106.26">mitzvotai</span></p>
 
@@ -83,7 +82,7 @@
 
             
         <footer class="credits">
-            Original Code By
+            Based on HTML 5 Read Along by
             <a rel="author" href="http://westonruter.github.com/">Weston Ruter</a>
             (<a href="https://twitter.com/westonruter">@westonruter</a>),
             <a href="http://x-team.com/" title="My employer">X-Team</a>.
