--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             
             <div id="passage-text" class="passage">
                
-                <p><span data-dur="2.54" data-begin="23.700">V'ahavta</span> <span data-dur="1.00" data-begin="26.52">et</span> <span data-dur="1.08" data-begin="27.6=82">Adonai</span> <span data-dur="1.4" data-begin="28.84">Elohecha</span> <p>
+                <p><span data-dur="2.54" data-begin="23.700">וְאָהַבְתָּ</span> <span data-dur="1.00" data-begin="26.52">אֵת</span> <span data-dur="1.08" data-begin="27.6=82">יְיָ</span> <span data-dur="1.4" data-begin="28.84">אֱלֹהֶיךָ</span> <p>
                      <p><span data-dur="0.58" data-begin="31.32">b'chol</span> <span data-dur="1.24" data-begin="31.9">l'vavecha</span> <span data-dur="0.96" data-begin="33.52">uv'chol</span> <span data-dur="1.8" data-begin="34.58">nafch'cha</span> <span data-dur="1.0" data-begin="36.8">uv'chol</span> <span data-dur="1.62" data-begin="38.02">m'odecha.</span> <p>
                      <p><span data-dur="1.86" data-begin="40.62">V'hayu</span> <span data-dur="1.8" data-begin="42.96">had'varim</span> <span data-dur="1.6" data-begin="44.94">ha-eileh</span> <p>
                      <p><span data-dur="1.24" data-begin="47.42">asher</span> <span data-dur="2.0" data-begin="48.8">anochi</span> <span data-dur="1.98" data-begin="51.26">m'tzav'cha</span> <span data-dur="1.32" data-begin="53.84">hayom</span> </sup><span data-dur="0.5" data-begin="55.4">al</span> <span data-dur="1.96" data-begin="55.9">l'vavecha</span> <p>
