--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
 <p><span data-dur="1.3" data-begin="100.18">לְמַעַן</span> <span data-dur="1.48" data-begin="101.58">תִּזְכְּרוּ</span> </sup><span data-dur="1.82" data-begin="103.52">וַעֲשִׂיתֶם</span> <span data-dur=".42" data-begin="105.58">אֶת</span> <span data-dur="0.42" data-begin="105.88">כָּל</span> <span data-dur="1.38" data-begin="106.26">מִצְוֹתָי</span></p>
 
-<p><span data-dur="1.02" data-begin="108.36">וִהְיִיתֶם</span> <span data-dur="1.44" data-begin="109.42">קְדֹשִים</span> </sup><span data-dur="1.88" data-begin="111.42">לֵאלֹֽהֵיכֶֽם.</span></p>
+<p><span data-dur="1.02" data-begin="108.36">וִהְיִיתֶם</span> <span data-dur="1.44" data-begin="109.42">קְדֹשִים</span> </sup><span data-dur="1.88" data-begin="111.42">לֵאלֹֽהֵיכֶֽם</span></p>
 
 <p><span data-dur="1.94" data-begin="114.22">אֲנִי</span> <span data-dur="1.46" data-begin="116.3">יְיָ</span> </sup><span data-dur="2.32" data-begin="117.96">אֱלֹֽהֵיכֶם</p>
 
-<p><span data-dur="1.16" data-begin="120.94">אֲשֶׁר</span> <span data-dur="1.58" data-begin="122.28">הוֹצֵאתִי</span> </sup><span data-dur="1.08" data-begin="123.96">אֶתְכֶם</span> <span data-dur="1.4" data-begin="125.34">מֵאֶֽרֶץ</span> <span data-dur="1.52" data-begin="126.64"> מִצְרַיִם/span></p>
+<p><span data-dur="1.16" data-begin="120.94">אֲשֶׁר</span> <span data-dur="1.58" data-begin="122.28">הוֹצֵאתִי</span> </sup><span data-dur="1.08" data-begin="123.96">אֶתְכֶם</span> <span data-dur="1.4" data-begin="125.34">מֵאֶֽרֶץ</span> <span data-dur="1.52" data-begin="126.64"> מִצְרַיִם</span></p>
 
 <p><span data-dur="0.82" data-begin="128.66">לִהְיוֹת</span> <span data-dur="1.06" data-begin="129.48">לָכֶם</span> </sup><span data-dur="1.44" data-begin="130.56">לֵֽאלֹהִים</span></p>
 
