--- a/vahavtranslit.html
+++ b/vahavtranslit.html
@@ -19,6 +19,10 @@
                 <a href="https://oaklandsinai.org/Clergy-Staff" title="xxx" target="_blank">Audio by Cantor Ilene Keys - Temple Sinai</a>
     
             </h2>
+            <h2>
+                <a href="https://mnsachs.github.io/Vahavta/index.html" title="xxx" target="_blank">Switch to Hebrew Text</a>
+    
+            </h2>
 
             <p class="loading">
                 <em><img src="loader.gif" alt="Initializing audio"> Loading audio…</em>
