--- a/vahavtranslit.html
+++ b/vahavtranslit.html
@@ -20,7 +20,7 @@
     
             </h2>
             <h2>
-                <a href="https://mnsachs.github.io/Vahavta/index.html" title="xxx" target="_blank">Switch to Hebrew Text</a>
+                <a href="https://mnsachs.github.io/Vahavta/index.html" title="xxx" >Switch to Hebrew Text</a>
     
             </h2>
 
