--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </h2>
             
              <h2>
-                <a href="https://mnsachs.github.io/Vahavta/vahavtranslit.html" title="xxx" target="_blank">Switch to Transliteration</a>
+                <a href="https://mnsachs.github.io/Vahavta/vahavtranslit.html" title="xxx" >Switch to Transliteration</a>
     
             </h2>
 
