--- a/avottrans.html
+++ b/avottrans.html
@@ -59,7 +59,7 @@
             
             <div id="passage-text" class="passage">
                
-                <p><span data-dur="2.34" data-begin="3.98">Adonai</span> <span data-dur="1.38" data-begin="6.46">s'fatai</span> <span data-dur="1.44" data-begin="7.88">tiftach</span> <span data-dur="1.22" data-begin="9.88">ufi</span> <span data-dur="1.5" data-begin="11.14">yagid</span> <span data-dur="3.5 data-begin="12.58">t'hilatecha</span> <p>
+                <p><span data-dur="2.34" data-begin="3.98">Adonai</span> <span data-dur="1.38" data-begin="6.46">s'fatai</span> <span data-dur="1.44" data-begin="7.88">tiftach</span> <span data-dur="1.22" data-begin="9.88">ufi</span> <span data-dur="1.5" data-begin="11.14">yagid</span> <span data-dur="3.5" data-begin="12.58">t'hilatecha</span> <p>
                      <p><span data-dur="0.58" data-begin="31.32">b'chol</span> <span data-dur="1.24" data-begin="31.9">l'vavecha</span> <span data-dur="0.96" data-begin="33.52">uv'chol</span> <span data-dur="1.8" data-begin="34.58">nafch'cha</span> <span data-dur="1.0" data-begin="36.8">uv'chol</span> <span data-dur="1.62" data-begin="38.02">m'odecha.</span> <p>
                      <p><span data-dur="1.86" data-begin="40.62">V'hayu</span> <span data-dur="1.8" data-begin="42.96">had'varim</span> <span data-dur="1.6" data-begin="44.94">ha-eileh</span> <p>
                      <p><span data-dur="1.24" data-begin="47.42">asher</span> <span data-dur="2.0" data-begin="48.8">anochi</span> <span data-dur="1.98" data-begin="51.26">m'tzav'cha</span> <span data-dur="1.32" data-begin="53.84">hayom</span> </sup><span data-dur="0.5" data-begin="55.4">al</span> <span data-dur="1.96" data-begin="55.9">l'vavecha</span> <p>
