--- a/avottrans.html
+++ b/avottrans.html
@@ -65,22 +65,10 @@
                      <p><span data-dur="1.12" data-begin="36.66">Elohei</span> <span data-dur="1.04" data-begin="37.8">Sarah</span> <span data-dur="1.06" data-begin="39.28">Elohei</span> <span data-dur="1.1" data-begin="40.34">Rivkah</span> </sup><span data-dur="1.14" data-begin="41.94">Elohei</span> <span data-dur="1.22" data-begin="43.14">Rachel</span> <span data-dur="1.56" data-begin="44.86">V'Elohei</span> <span data-dur="1.22" data-begin="46.56">Leah</span>  <p>
                  <p><span data-dur="1.22" data-begin="48.5">Ha-El</span> <span data-dur="1.52" data-begin="49.82">hagadol</span> <span data-dur="1.32" data-begin="51.42">hagibor</span> <span data-dur="1.76" data-begin="52.96">v'hanora</span> <span data-dur=".54" data-begin="55.24">El</span> <span data-dur="2.64" data-begin="55.9">elyon</span> <p>
                  <p><span data-dur="1.24" data-begin="59.02">gomeil</span> <span data-dur="1.28" data-begin="60.42">chasadim</span> <span data-dur="1.28" data-begin="61.72">tovim</span> <span data-dur="2.42" data-begin="63.54">v'koneih</span> <span data-dur="1.7" data-begin="66.22">hakol</span> </sup><span data-dur="1.44" data-begin="68.5">v'zocheir</span> <span data-dur="1.28" data-begin="70.36">chasdei</span> <span data-dur="1.02" data-begin="71.62">avot</span> <span data-dur="1.62" data-begin="73.02">v'imahot</span> <p>
-             <p><span data-dur="1.42" data-begin="80.18">Uk'shartam</span> <span data-dur="1.04" data-begin="81.7">l'ot</span> <span data-dur="0.32" data-begin="83.06">al</span> <span data-dur="1.1" data-begin="83.36">yadecha</span> <span data-dur="0.74" data-begin="85.14">v'hayu</span>, <span data-dur="1.98" data-begin="85.88">l'totafot</span> <span data-dur="0.54" data-begin="88.32">bein</span> <span data-dur="1.66" data-begin="88.9">einecha.</span> <p>
-             <p><span data-dur="2.24" data-begin="91.34">Uct'tavtam</span> <span data-dur="0.3" data-begin="93.98">al</span> </sup><span data-dur="0.82" data-begin="94.3">m'zuzot</span> <span data-dur="1.34" data-begin="95.14">beitecha</span> <span data-dur="2.26" data-begin="96.92">uvish'arecha</span></p>
-<br>
+             <p><span data-dur="1.02" data-begin="75.28">umeivi</span> <span data-dur="1.52" data-begin="76.28">g'ulaht</span> <span data-dur="1.02" data-begin="78.18">liv'nei</span> <span data-dur="1.64" data-begin="79.3">v'neihem</span> <span data-dur="1.14" data-begin="81.42">l'maan</span>, <span data-dur="1.12" data-begin="82.62">sh'mo</span> <span data-dur="1.98" data-begin="83.9">b'ahavah</span> <p>
+             <p><span data-dur=".82 data-begin="86.62">Melech</span> <span data-dur="1.12" data-begin="87.48">ozeir</span> </sup><span data-dur="1.32" data-begin="88.84">umoshia</span> <span data-dur="1.38" data-begin="90.26">umagen</span></p>
 
-<p><span data-dur="1.3" data-begin="100.18">L'maan</span> <span data-dur="1.48" data-begin="101.58">tizk'ru</span> </sup><span data-dur="1.82" data-begin="103.52">va'asitem</span> <span data-dur=".42" data-begin="105.58">et</span> <span data-dur="0.42" data-begin="105.88">kol</span> <span data-dur="1.38" data-begin="106.26">mitzvotai</span></p>
-
-<p><span data-dur="1.02" data-begin="108.36">vih'yitem</span> <span data-dur="1.44" data-begin="109.42">k'doshim</span> </sup><span data-dur="1.88" data-begin="111.42">l'loheichem.</span></p>
-
-<p><span data-dur="1.94" data-begin="114.22">Ani</span> <span data-dur="1.46" data-begin="116.3">Adonai</span> </sup><span data-dur="2.32" data-begin="117.96">Eloheichem</p>
-
-<p><span data-dur="1.16" data-begin="120.94">asher</span> <span data-dur="1.58" data-begin="122.28">hotzeiti</span> </sup><span data-dur="1.08" data-begin="123.96">et-chem</span> <span data-dur="1.4" data-begin="125.34">mei-eretz</span> <span data-dur="1.52" data-begin="126.64">Mitzrayim</span></p>
-
-<p><span data-dur="0.82" data-begin="128.66">lih'yot</span> <span data-dur="1.06" data-begin="129.48">lachem</span> </sup><span data-dur="1.44" data-begin="130.56">l'lohim.</span></p>
-
-<p><span data-dur="1.58" data-begin="132.78">Ani</span> <span data-dur="1.36" data-begin="135">Adonai</span> </sup><span data-dur="3.72" data-begin="135.9">Eloheichem</span></p>
-                
+<p><span data-dur="1.1" data-begin="92.2">Baruch</span> <span data-dur=".88" data-begin="93.38">atah</span> </sup><span data-dur="1.6" data-begin="94.26">Adonai</span> <span data-dur=".68" data-begin="96.4">magein</span> <span data-dur="1.92" data-begin="97.08">Avraham</span> <span data-dur="1.18" data-begin="99.3">v'ezrat</span> <span data-dur="3.12" data-begin="100.76">Sarah</span></p>
                
             </div>
 
