--- a/avotheb.html
+++ b/avotheb.html
@@ -5,7 +5,7 @@
         <title>V'ahavta</title>
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styleheb.css">
     </head>
     <body>
         <h1>Avot v'Imahot</h1>
