--- a/avotheb.html
+++ b/avotheb.html
@@ -19,7 +19,7 @@
     
             </h2>
             <h2>
-                <a href="https://mnsachs.github.io/Vahavta/avotheb.html" title="xxx" >Switch to Hebrew Text</a>
+                <a href="https://mnsachs.github.io/Vahavta/avottrans.html" title="xxx" >Switch to Transliteration</a>
     
             </h2>
 
