--- a/gvurottrans.html
+++ b/gvurottrans.html
@@ -66,6 +66,7 @@
 <span data-dur="1.30" data-begin="7.28">m'chayei</span>
 <span data-dur="0.58" data-begin="8.62">hakol</span>
 <span data-dur="1.42" data-begin="9.2">atah</span>
+<span data-dur="1.2" data-begin="10.62">rav</span>                
 <span data-dur="2.26" data-begin="11.82">l'hosheea</span>
 <span data-dur="0.66" data-begin="17.68">masheev</span>
 <span data-dur="1.36" data-begin="18.3">haruach</span>
@@ -82,7 +83,7 @@
 <span data-dur="0.96" data-begin="39.58">rabim</span>
 <span data-dur="1.34" data-begin="40.88">somech</span>
 <span data-dur="1.10" data-begin="42.26">noflim</span>
-<span data-dur="1.18" data-begin="43.48">v'rochey</span>
+<span data-dur="1.18" data-begin="43.48">v'rofey</span>
 <span data-dur="1.46" data-begin="44.66">cholim</span>
 <span data-dur="1.66" data-begin="46.54">u'matir</span>
 <span data-dur="2.08" data-begin="48.26">asurim</span>
