--- a/gvurottrans.html
+++ b/gvurottrans.html
@@ -68,11 +68,11 @@
 <span data-dur="1.42" data-begin="9.2">atah</span>
 <span data-dur="1.2" data-begin="10.62">rav</span>                
 <span data-dur="2.26" data-begin="11.82">l'hosheea</span> <p>
-<p>Winter: <span data-dur="0.66" data-begin="17.68">masheev</span>
+<p><b>Winter:</b> <span data-dur="0.66" data-begin="17.68">masheev</span>
 <span data-dur="1.36" data-begin="18.3">haruach</span>
 <span data-dur="1.14" data-begin="19.66">u'morid</span>
 <span data-dur="1.92" data-begin="20.8">haga'ashem</span> <p>
-<p>Summer: <span data-dur="1.32" data-begin="26.1">morid</span>
+<p><b>Summer:</b> <span data-dur="1.32" data-begin="26.1">morid</span>
 <span data-dur="2.06" data-begin="27.64">hatal</span> <p>
 <p><span data-dur="1.56" data-begin="30.72">m'chalkel</span>
 <span data-dur="1.14" data-begin="32.24">chayim</span>
