--- a/gvurottrans.html
+++ b/gvurottrans.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Avot v'Imahot</h1>
+        <h1>G'vurot</h1>
 
         <!-- @todo The link could pull in README.md via Ajax and render it inline -->
       
