--- a/gvurotheb.html
+++ b/gvurotheb.html
@@ -61,7 +61,7 @@
                
  <p><span data-dur="1.02" data-begin="2.42">אַתָּה</span>
 <span data-dur="1.14" data-begin="3.44">גִּבּוֹר</span>
-<span data-dur="0.84" data-begin="4.78">לְעוֹלָם/span>
+<span data-dur="0.84" data-begin="4.78">לְעוֹלָם</span>
 <span data-dur="1.28" data-begin="5.62">אֲדֹנָי</span>
 <span data-dur="1.30" data-begin="7.28">מְחַיֵּה</span>
 <span data-dur="0.58" data-begin="8.62">הַכֹּל</span>
@@ -71,7 +71,7 @@
 <p><b>Winter:</b> <span data-dur="0.66" data-begin="17.68">מַשִּׁיב</span>
 <span data-dur="1.36" data-begin="18.3">הָרֽוּחַ</span>
 <span data-dur="1.14" data-begin="19.66">וּמוֹרִיד</span>
-<span data-dur="1.92" data-begin="20.8">הַגֶּֽשֶׁם/span> <p>
+<span data-dur="1.92" data-begin="20.8">הַגֶּֽשֶׁם</span> <p>
 <p><b>Summer:</b> <span data-dur="1.32" data-begin="26.1">מוֹרִיד</span>
 <span data-dur="2.06" data-begin="27.64">הַטַּל</span> <p>
 <p><span data-dur="1.56" data-begin="30.72">מְכַלְכֵּל</span>
@@ -80,13 +80,13 @@
 <span data-dur="1.22" data-begin="35.68">מְחַיֵּה</span>
 <span data-dur="1.24" data-begin="36.9">הַכֹּל</span>
 <span data-dur="1.20" data-begin="38.38">בְּרַחֲמִים</span>
-<span data-dur="0.96" data-begin="39.58">רַבִּים/span> <p>
+<span data-dur="0.96" data-begin="39.58">רַבִּים</span> <p>
 <p><span data-dur="1.34" data-begin="40.88">סוֹמֵךְ</span>
 <span data-dur="1.10" data-begin="42.26">נוֹפְלִים</span>
 <span data-dur="1.18" data-begin="43.48">וְרוֹפֵא</span>
 <span data-dur="1.46" data-begin="44.66">חוֹלִים</span>
 <span data-dur="1.66" data-begin="46.54">וּמַתִּיר</span>
-<span data-dur="2.08" data-begin="48.26">אֲסוּרִים/span> <p>
+<span data-dur="2.08" data-begin="48.26">אֲסוּרִים</span> <p>
 <p><span data-dur="1.80" data-begin="50.92">וּמְקַיֵּם</span>
 <span data-dur="2.14" data-begin="53.24">אֱמוּנָתוֹ</span>
 <span data-dur="1.76" data-begin="55.8">לִישֵׁנֵי</span>
@@ -111,7 +111,7 @@
 <span data-dur="0.72" data-begin="85.72">אַתָּה</span>
 <span data-dur="1.68" data-begin="86.44">יְיָ</span>
 <span data-dur="1.90" data-begin="88.52">מְחַיֵּה</span>
-<span data-dur="4.30" data-begin="90.72">הַכֹּל.</span> <p>
+<span data-dur="4.30" data-begin="90.72">הַכֹּל</span> <p>
                
             </div>
 
