--- a/gvurotheb.html
+++ b/gvurotheb.html
@@ -67,7 +67,7 @@
 <span data-dur="0.58" data-begin="8.62">הַכֹּל</span>
 <span data-dur="1.42" data-begin="9.2"> אַתָּה</span>
 <span data-dur="1.2" data-begin="10.62">רַב</span>                
-<span data-dur="2.26" data-begin="11.82">לְהוֹשִֽׁיעַ.</span> <p>
+<span data-dur="2.26" data-begin="11.82">לְהוֹשִֽׁיעַ</span> <p>
 <p><b>Winter:</b> <span data-dur="0.66" data-begin="17.68">מַשִּׁיב</span>
 <span data-dur="1.36" data-begin="18.3">הָרֽוּחַ</span>
 <span data-dur="1.14" data-begin="19.66">וּמוֹרִיד</span>
